--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
     "@angular/cdk": "^12.2.6",
     "@angular/common": "~12.1.0",
+    "@angular/cli": "~12.1.4",
+    "@angular/compiler-cli": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
@@ -22,7 +25,8 @@
     "@angular/router": "~12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "~4.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
@@ -37,5 +41,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
+  },
+  "engines": {
+    "node": "14.17.3",
+    "npm": "7.20.2"
   }
 }
